--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /venv/
 /Results/
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/Stori-QA-Automation-Challenge.iml
+/.idea/vcs.xml
